--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,3 +57,36 @@ jobs:
           env_vars: OS,PYTHON
           name: codecov-umbrella
           fail_ci_if_error: false
+  upstream-dev:
+    name: upstream-dev
+    if: github.repository == 'ncar-xdev/ecgtools'
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Fetch all history for all branches and tags.
+
+      - name: set up conda environment
+        uses: mamba-org/setup-micromamba@v2
+        with:
+          environment-file: ci/environment-upstream-dev.yml
+          init-shell: >-
+            bash
+          cache-environment: true
+          cache-downloads: true
+          post-cleanup: "all"
+          create-args: |
+            python=3.12
+
+      - name: Install ecgtools
+        run: |
+          python -m pip install -e . --no-deps --force-reinstall
+          conda list
+
+      - name: Run Tests
+        run: |
+          python -m pytest
