--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,7 +1,10 @@
 version: 2
 conda:
   environment: ci/environment-docs.yml
+sphinx:
+  configuration: docs/source/conf.py
+  fail_on_warning: false
 build:
   os: "ubuntu-20.04"
   tools:
-    python: "mambaforge-4.10"
+    python: "mambaforge-latest"
